fourth semester(winter 2024)/OOP345/Project/ms2/Mildstone 2/errors.txt
CustomerOrder.cpp: In constructor ‘seneca::CustomerOrder::CustomerOrder(const std::string&)’:
CustomerOrder.cpp:21:30: error: ‘count’ is not a member of ‘std’; did you mean ‘cout’?
   21 |                 m_cnt = std::count(source.begin(), source.end(), u.getDelimiter()) - 1;
      |                              ^~~~~
      |                              cout
